egonlang-core/res/examples/valid/block_mixed.eg
{
    123;
    "foo";
    {};
    ();
    (1,2,3,);
    [a, b, c]
};