egonlang-core/res/examples/invalid/fn_expr_returning_empty_list.eg
(a: number, b: number): list<number> => [];

// out: SyntaxError: unexpected "["; expected: ["\"(\"", "\"{\""]